updating pom to resolve failing tests