@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Versions -->
         <version.spring.boot>3.2.3</version.spring.boot>
-        <version.springdoc.openapi>1.8.0</version.springdoc.openapi>
+        <version.springdoc.openapi>1.6.0</version.springdoc.openapi>
         <api-helper-java.version>3.0.0</api-helper-java.version>
         <api-security-java.version>2.0.1</api-security-java.version>
         <structured-logging.version>3.0.0</structured-logging.version>
@@ -39,6 +39,7 @@
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
         <apache-log4j-bom.version>2.23.1</apache-log4j-bom.version>
+        <argLine>-Dnet.bytebuddy.experimental=true</argLine>
     </properties>
 
     <dependencyManagement>
@@ -51,10 +52,20 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-bom</artifactId>
-                <version>${apache-log4j-bom.version}</version>
-                <type>pom</type>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>2.0.12</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>2.0.12</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>6.1.4</version>
             </dependency>
         </dependencies>
 
